# family-atlas-collector

./: .gitignore  pyproject.toml  run_collector.py
collector/: collector.py  config.py  engine.py  logger.py  models.py  saver.py
server/: schema.py  server.py  validation.py
